- Improved DQuery system by adding new functions - Added new store for testing purpose
